Fix left nav scrollbar to be hidden

--- a/app/assets/stylesheets/artist.scss
+++ b/app/assets/stylesheets/artist.scss
@@ -136,8 +136,8 @@
 ::-webkit-scrollbar-thumb {
     -webkit-border-radius: 10px;
     border-radius: 10px;
-    background: rgba(50,50,50,0.8);
-    -webkit-box-shadow: inset 0 0 6px rgba(50,50,50,0.5);
+    background: rgba(60,60,60,0.8);
+    -webkit-box-shadow: inset 0 0 6px rgba(60,60,60,0.5);
 }
 ::-webkit-scrollbar-thumb:window-inactive {
 	background: rgba(255,0,0,0.4);
