--- a/app/assets/stylesheets/left_nav.scss
+++ b/app/assets/stylesheets/left_nav.scss
@@ -39,8 +39,12 @@ $green: #1ed760;
   top: 0;
   left: 0;
   padding-bottom: 30px;
-  // overflow: scroll;
+  overflow-y: scroll;
   // border: 1px solid white;
+}
+
+#left-nav::-webkit-scrollbar {
+    display: none;  // Safari and Chrome
 }
 
 .left-nav-playlist-list {
